<resources>
    <string name="app_name">Activity Tracker</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track_your_activities">Track your activities</string>
    <string name="manage_your_activities_and_progresses">Manage your activities and progresses with an interactive UI</string>
    <string name="log_in">Log In</string>
    <string name="dont_have_an_account">Don’t have an account? Sign up</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome!</string>
    <string name="password">Password</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have an account? Log in</string>
    <string name="not_email">Not an email</string>
    <string name="password_not_valid">Password length should be at least 6 or at most 30</string>
    <string name="email">Email</string>
    <string name="user_height_value">%s</string>
    <string name="user_age_value">%s</string>
    <string name="user_weight_value">%s</string>
    <string name="user_name_value">%s</string>
    <string name="add_new_activity">Add new activity</string>
    <string name="edit_activity">Edit activity</string>
    <string name="click_here">Click here</string>
    <string name="activity_duration">%s %s</string>
    <string name="activity_calories">%s cal</string>
    <string name="history">History</string>
    <string name="type_here">Type here</string>
    <string name="sample_email">wiut7986@gmail.com</string>
    <string name="edit_personal_info">Edit personal info</string>
    <string name="not_available">N/A</string>
    <string name="select_date">Select date</string>
    <string name="choose_date">Choose date</string>
    <string name="select_activity">Select activity</string>
    <string name="times_performed">Times performed</string>
    <string name="insert_amount">Insert amount</string>
    <string name="duration">Duration</string>
    <string name="insert_duration">Insert duration</string>
    <string name="additional_notes">Additional notes</string>
    <string name="add_activity">Add activity</string>
    <string name="insert_name">Insert name</string>
    <string name="insert_height">Insert height</string>
    <string name="insert_age">Insert age</string>
    <string name="insert_weight">Insert weight</string>
    <string name="edit_info">Edit info</string>
    <string name="email_should_not_be_empty">Email should not be empty</string>
    <string name="password_should_not_be_empty">Password should not be empty</string>
    <string name="sample_account">Sample account</string>
    <string name="name_should_not_be_empty">Name should not be empty</string>
    <string name="height_should_not_be_empty">Height should not be empty</string>
    <string name="age_should_not_be_empty">Age should not be empty</string>
    <string name="weight_should_not_be_empty">Weight should not be empty</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="toolbar_name">Toolbar Name</string>
    <string name="menu">Menu</string>
    <string name="share_with_others">Share with others</string>
    <string name="log_out">Log out</string>

    <string-array name="height_units">
        <item>cm</item>
        <item>ft</item>
    </string-array>

    <string-array name="weight_units">
        <item>kg</item>
        <item>lb</item>
    </string-array>

    <string-array name="activities">
        <item>Biking</item>
        <item>Push ups</item>
        <item>Sit ups</item>
        <item>Pull ups</item>
        <item>Lunges</item>
        <item>Rope skipping</item>
        <item>Water exercise</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Football</item>
        <item>Juggling</item>
        <item>Skateboarding</item>
        <item>Soccer</item>
        <item>Tennis</item>
    </string-array>

    <string-array name="duration_units">
        <item>min</item>
        <item>hour</item>
    </string-array>
</resources>