<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/edit_personal_info"
            android:icon="@drawable/ic_edit"
            android:title="@string/edit_personal_info" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_clock"
            android:title="@string/history" />
        <item
            android:id="@+id/share_with_others"
            android:icon="@drawable/ic_share"
            android:title="@string/share_with_others" />
    </group>

    <group android:id="@+id/sub_menu">
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out" />
    </group>

</menu>